# resume_ats_analysis

./: .gitignore  MODELS.md  MODEL_DOWNLOAD.md  README.md  README_CN.md  VERIFICATION.md  design.md  main.py  pyproject.toml  pytest.ini
src/: __init__.py  pipeline.py
src/eval/: calibration.py  metrics.py
src/features/: __init__.py  keyword_coverage.py  quality_rules.py
src/fusion/: fusion.py
src/judging/: __init__.py  llm_judge.py  prompts.py
src/matching/: __init__.py  embedder.py  matcher.py
src/parsing/: __init__.py  parser.py
src/utils/: config.py  schema.py
tests/: conftest.py  test_features.py  test_fusion.py  test_judging.py  test_matching.py  test_parsing.py  test_pipeline.py
