[project]
name = "resume-analysis"
version = "0.1.0"
description = "Resume quality scoring + resume-job matching system (hybrid: rules + ML semantic matching + LLM judge)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.11.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# Heavy optional deps for high-accuracy semantic matching (bge-m3 / sentence-transformers).
# Install with: uv sync --extra embedding
embedding = [
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.10",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
